--- a/[gamemodes]/driftV/client/web/css/hud.css
+++ b/[gamemodes]/driftV/client/web/css/hud.css
@@ -38,6 +38,7 @@
   font-weight: 100;
   color: #fff;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+  letter-spacing: 2px;
 }
 .driftDisplayMulti {
   font-size: 30px;
