--- a/[gamemodes]/driftV/client/web/css/hud.css
+++ b/[gamemodes]/driftV/client/web/css/hud.css
@@ -100,6 +100,6 @@ body {
   text-align: justify;
   text-align-last: center;
   overflow-wrap: normal;
-  word-break: break-all;
+  word-break:keep-all;
   width: 300px
 }
