Update loading screen

--- a/[gamemodes]/loading/css/main.css
+++ b/[gamemodes]/loading/css/main.css
@@ -1,11 +1,20 @@
 body, html {
     height: 100%;
     margin: 0;
+    background-color: black;
   }
   
+  
+  .parent {
+    position: relative;
+    top: 0;
+    left: 0;
+  }
   .bg {
     /* The image used */
+    position: relative;
     background-image: url("../img/Loading_screen.png");
+    
   
     /* Full height */
     height: 100%;
@@ -16,3 +25,24 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+
+  .car {
+    position: absolute;
+    transform: scaleX(-1);
+    filter: invert();
+    bottom: 0.1px;
+    left: 15%;
+    height: 20%;
+    animation: move 10s infinite;
+  }
+
+  @keyframes move {
+    /* 0% {left: 4%; opacity: 0}
+    50%  {left: 44%; opacity: 1}
+    100% {left: 88%; opacity: 0;} */
+
+    from  {left: 20%; opacity: 0}
+    50%  {left: 44%; opacity: 1} /* ignored */
+    to   {left: 88%; opacity: 0;} 
+}
